--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -8,10 +8,10 @@ mixin header
         .header__contacts
           .header__mobile-block
             p.header__title--mobile Породистые щенки Померанского Шпица
-            a.header__link(href="tel:+79851914142")
+            a.header__link(href="tel:+79851914142" onclick="ym(60757945, 'reachGoal', 'call'); return true;")
               +img('icons/phone.png', 'header__icon')
               span.header__link-gray +7 (985)
               span 191-41-42
-          a.header__mobile-link(href="tel:+79851914142")
+          a.header__mobile-link(href="tel:+79851914142" onclick="ym(60757945, 'reachGoal', 'call'); return true;")
           a.link.header__link-callback.js-open-popup(href="#")
             span.link__text Заказать обратный звонок
