--- a/src/components/callback/callback.scss
+++ b/src/components/callback/callback.scss
@@ -86,6 +86,28 @@
     }
   }
 
+  &__input-block {
+    position: relative;
+    width: 100%;
+    max-width: 450px;
+
+    @include tablet {
+      margin: 0 auto;
+    }
+
+    .text-message {
+      @include tablet {
+        font-size: 14px;
+        padding: 24px 12px;
+      }
+
+      @include mobile {
+        font-size: 12px;
+        padding: 24px 12px;
+      }
+    }
+  }
+
   &__input {
     display: block;
     width: 100%;
