--- a/src/components/common/base.scss
+++ b/src/components/common/base.scss
@@ -14,6 +14,35 @@ body {
   }
 }
 
+.text-message {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 24px 12px;
+  border-radius: 6px;
+  background-color: #f5eddc;
+  font-size: 16px;
+  color: $color-main;
+  font-weight: bold;
+
+  &.active {
+    display: block;
+  }
+
+  @include tablet {
+    font-size: 14px;
+    padding: 20px 12px;
+  }
+
+  @include mobile {
+    font-size: 12px;
+    padding: 18px 12px;
+  }
+}
+
 section {
   @include tablet {
     overflow: hidden;
