--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -116,6 +116,12 @@
     }
   }
 
+  &__input-block {
+    position: relative;
+    width: 100%;
+    max-width: 450px;
+  }
+
   &__input {
     display: block;
     width: 100%;
