--- a/src/index.pug
+++ b/src/index.pug
@@ -9,6 +9,20 @@ html(lang="en")
     title Щенки померанского шпица
     link(rel="icon" href="./source/img/logo.png" type="image/png")
     link(rel="stylesheet", href="./source/style/style.css")
+
+    <script type="text/javascript">
+      | (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      | m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      | (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      | ym(60757945, "init", {
+      |   clickmap: true,
+      |   trackLinks: true,
+      |   accurateTrackBounce: true,
+      |   webvisor: true
+      | });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/60757945" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
   body
 
     .content
